--- a/private/html-email.html
+++ b/private/html-email.html
@@ -10,6 +10,8 @@
   <h1><b>Welcome to Vimaana</b></h1>
   <p>Please <a href={{link}}>click</a> on this link to verify your account</p>
   <br>
+  <p>Please use below password to login to your account and manage your posts</p>
+   <b>{{password}}</b>
   <p>
       Thank you using Vimaana App
   </p>
