some more changes

--- a/private/html-email.html
+++ b/private/html-email.html
@@ -9,7 +9,8 @@
 
 <body itemscope itemtype="http://schema.org/EmailMessage">
   {{#if userExists}}
-  <h1><b>Your post have been saved successfully. Please use manage posts options to update your post.  </b></h1>
+  <h5><b>Your post have been saved successfully.</b></h5>
+  <p>Please use manage posts options to update your post. </p>
   {{else}}
   <h1><b>Welcome to Vimaana</b></h1>
   <p>Please <a href={{link}}>click</a> on this link to verify your account</p>
