--- a/client/index.html
+++ b/client/index.html
@@ -2,14 +2,14 @@
   <base href="/">
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=no" />
-  <title>Vimaana Classifieds | Helping Desi Community USA </title>
+  <title>WeDesi Classifieds | Helping Desi Community USA </title>
   <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDbphq9crcdpecbseKX3Yx2LPxMRqWK-rc&libraries=places"></script>
   <!--Import Google Icon Font-->
-  <link rel="shortcut icon" type="image/ico" href="img/favicon-vimeo.ico" />
+  <!--<link rel="shortcut icon" type="image/ico" href="img/favicon-vimeo.ico" />-->
   <link href="https://fonts.googleapis.com/css?family=Roboto:400,700,900" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Roboto:400,700,700i,900" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=Ubuntu" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Roboto|Ubuntu" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
 </head>
